[package]
name = "dot_ix"
description = "Interactive dot graphs"
documentation = "https://docs.rs/dot_ix/"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
dot_ix_model = { workspace = true }
dot_ix_rt = { workspace = true, optional = true }
dot_ix_web_components = { workspace = true, optional = true }

[features]
default = ["rt", "web_components"]
rt = ["dep:dot_ix_rt"]
web_components = ["dep:dot_ix_web_components"]

ssr = ["dot_ix_web_components?/ssr"]

[workspace]
members = ["crate/*", "playground", "workspace_tests"]

[workspace.package]
version = "0.9.2"
authors = ["Azriel Hoh <azriel91@gmail.com>"]
edition = "2024"
homepage = "https://github.com/azriel91/dot_ix"
repository = "https://github.com/azriel91/dot_ix"
readme = "README.md"
categories = ["visualization"]
keywords = ["graphviz", "dot"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# dot_ix crates
dot_ix = { version = "0.9.2", path = "." }
dot_ix_model = { version = "0.9.2", path = "crate/model" }
dot_ix_rt = { version = "0.9.2", path = "crate/rt" }
dot_ix_static_check_macros = { version = "0.9.2", path = "crate/static_check_macros" }
dot_ix_web_components = { version = "0.9.2", path = "crate/web_components" }

# external crates
axum = "0.8.3"
cfg-if = "1"
console_error_panic_hook = "0.1"
console_log = "1"
gloo-net = "0.6.0"
id_newtype = "0.1.0"
indexmap = "2.9.0"
indoc = "2.0.6"
js-sys = "0.3.77"
web-sys = "0.3.77"
leptos = { version = "0.8.0-rc1" }
leptos_axum = "0.8.0-rc1"
leptos_meta = { version = "0.8.0-rc1" }
leptos_router = { version = "0.8.0-rc1" }
leptos_router_macro = { version = "0.8.0-rc1" }
leptos-use = "0.16.0-beta"
log = "0.4"
log4rs = { version = "1.3.0", default-features = false }
monaco = "0.5.0"
serde = "1.0.219"
tempfile = "3.19.1"
tokio = "1.44.2"
tower = "0.5.2"
wasm-bindgen = "0.2.100"
tailwind-css = "0.13.0"
thiserror = "2.0.12"
tracing = "0.1.41"
http = "1.3.1"
proc-macro2 = "1.0.95"
quote = "1.0.40"
reqwest = "0.12.15"
syn = "2.0.100"
serde_yaml = "0.9.34"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }
