[package]
name = "dot_ix_playground"
description = "Interactive dot graphs playground web application."
documentation = "https://docs.rs/dot_ix_playground/"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
axum = { workspace = true, optional = true }
console_error_panic_hook = { workspace = true }
console_log = { workspace = true }
cfg-if = { workspace = true }
dot_ix = { version = "0.8.1", path = ".." }
gloo-net = { workspace = true, features = ["http"] }
leptos = { workspace = true }
leptos_axum = { workspace = true, optional = true }
leptos_meta = { workspace = true }
leptos_router = { workspace = true }
leptos_router_macro = { workspace = true }
leptos-use = { workspace = true }
log = { workspace = true }
log4rs = { workspace = true, optional = true, default-features = false, features = ["console_appender", "threshold_filter"] }
monaco = { workspace = true }
reqwest = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, optional = true }
tower = { workspace = true, optional = true }
tower-http = { version = "0.6", features = ["fs"], optional = true }
tracing = { workspace = true, optional = true }
http = { workspace = true }
serde_yaml = { workspace = true }
lz-str = "0.2.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }
web-sys = { workspace = true, features = ["console", "AbortController", "AbortSignal", "Document", "Element", "HtmlElement", "Url", "UrlSearchParams", "Window"] }
js-sys = { workspace = true }

[features]
hydrate = ["leptos/hydrate"]
ssr = [
    "dot_ix/ssr",
    "dep:axum",
    "dep:log4rs",
    "dep:tokio",
    "tokio?/macros",
    "tokio?/process",
    "tokio?/rt-multi-thread",
    "dep:tower",
    "tower?/util",
    "dep:tower-http",
    "dep:leptos_axum",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "dep:reqwest",
    "dep:tracing",
]
csr = [
    "leptos/csr",
]
server_side_graphviz = ["dot_ix/server_side_graphviz"]

[package.metadata.cargo-all-features]
denylist = ["axum", "tokio", "tower", "tower-http", "leptos_axum"]
skip_feature_sets = [["ssr", "hydrate"]]

[package.metadata.leptos]
# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name
output-name = "dot_ix"

# The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
site-root = "target/site"

# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
# Defaults to pkg
site-pkg-dir = "pkg"

# [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by dart-sass into CSS. The CSS is optimized by Lightning CSS before being written to <site-root>/<site-pkg>/app.css
# style-file = "style/main.scss"
tailwind-input-file = "style/tailwind.css"
tailwind-config-file = "style/tailwind.config.js"
# Assets source dir. All files found here will be copied and synchronized to site-root.
# The assets-dir cannot have a sub directory with the same name/path as site-pkg-dir.
#
# Optional. Env: LEPTOS_ASSETS_DIR.
assets-dir = "public"

# The IP and port (ex: 127.0.0.1:7890) where the server serves the content. Use it in your server setup.
site-addr = "127.0.0.1:7890"

# The port to use for automatic reload monitoring
reload-port = 7891

# [Optional] Command to use when running end2end tests. It will run in the end2end dir.
#   [Windows] for non-WSL use "npx.cmd playwright test"
#   This binary name can be checked in Powershell with Get-Command npx
end2end-cmd = "npx playwright test"
end2end-dir = "end2end"

#  The browserlist query used for optimizing the CSS.
browserquery = "defaults"

# Set by cargo-leptos watch when building with that tool. Controls whether autoreload JS will be included in the head
watch = false

# The environment Leptos will run in, usually either "DEV" or "PROD"
env = "DEV"

# The features to use when compiling the bin target
#
# Optional. Can be over-ridden with the command line parameter --bin-features
# bin-features = ["ssr"]     # server side rendered app
# bin-features = ["hydrate"] # client side compilation for server side rendered app
# bin-features = ["csr"]     # client side rendered app
bin-features = ["ssr"]

# If the --no-default-features flag should be used when compiling the bin target
#
# Optional. Defaults to false.
bin-default-features = false

# The features to use when compiling the lib target
#
# Optional. Can be over-ridden with the command line parameter --lib-features
lib-features = ["hydrate"]

# If the --no-default-features flag should be used when compiling the lib target
#
# Optional. Defaults to false.
lib-default-features = false
