[package]
name = "dot_ix_rt"
description = "Runtime logic for the `dot_ix` diagramming application."
documentation = "https://docs.rs/dot_ix_rt/"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true

[lib]
doctest = false
test = false

[dependencies]
dot_ix_model = { workspace = true }
indexmap = { workspace = true, features = ["serde"] }
indoc = { workspace = true }
