[package]
name = "dot_ix_static_check_macros"
description = "Compile time validation macros for `dot_ix`."
documentation = "https://docs.rs/dot_ix_static_check_macros/"
authors.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true

[lib]
proc-macro = true
doctest = true
test = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
